# Another-CHIP-8-Emulator

./: README.md
main/: .gitignore  Cargo.toml
main/src/: audio.rs  cpu.rs  display.rs  framebuffer.rs  main.rs
