[package]
name = "ch8"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0"
# TODO: Document build options for sdl3 in readme:
# cargo build: builds sdl3 from source
# cargo build --no-default-features --features system-sdl: use system installed sdl3
sdl3 = { version = "0", optional = true }

[features]
default = ["bundled-sdl"]
bundled-sdl = ["sdl3/build-from-source"]
system-sdl = ["sdl3"]
